force-app/main/default/objects/CWS_GainsightInfo__mdt/CWS_GainsightInfo__mdt.object-meta.xml
<CustomObject>
    <label>CWS_GainsightInfo</label>
    <pluralLabel>CWS_GainsightInfos</pluralLabel>
</CustomObject>