force-app/main/default/objects/CWS_GainsightInfo__mdt/fields/CWS_GSeventVersion__c.field-meta.xml
<CustomField>
    <fullName>CWS_GSeventVersion__c</fullName>
    <label>CWS_GSeventVersion</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>