force-app/main/default/objects/CWS_GainsightInfo__mdt/fields/CWS_GSsharedSecret__c.field-meta.xml
<CustomField>
    <fullName>CWS_GSsharedSecret__c</fullName>
    <label>CWS_GSsharedSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>