force-app/main/default/objects/CWS_GainsightInfo__mdt/fields/CWS_GStenantId__c.field-meta.xml
<CustomField>
    <fullName>CWS_GStenantId__c</fullName>
    <label>CWS_GStenantId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>